--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 				z-index: -1;
 			}
 		</style>
-		<link id="main-stylesheet" rel="stylesheet" href="file:///Users/morganli/Desktop/BA技能/Personal%20Web/index.css">
+		<link id="main-stylesheet" rel="stylesheet" href="https://github.com/Morganlee111/morganliliqize.github.io/index.css">
 		<script src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/index.js"></script>
 	</head>
 	<body id="my-body1">
