--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 	</head>
 	<body id="my-body1">
 		<header>
-			<h1><a href="https://stuweb.cecs.anu.edu.au/~u7412810/Other%20Pages/Fitness.html">Morgan Li Web</a></h1>
+			<h1><a href="https://morganlee111.github.io/morganliliqize.github.io//index.html">Morgan Li Web</a></h1>
 			<nav>
 				<ul>
-					<li><a href="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/index.html">Home</a></li>
-					<li><a href="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/About.html">About</a></li>
-					<li><a href="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Projects.html">Projects</a></li>
-					<li><a href="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Resume.html">Resume</a></li>
+					<li><a href="https://morganlee111.github.io/morganliliqize.github.io//index.html">Home</a></li>
+					<li><a href="https://morganlee111.github.io/morganliliqize.github.io//About.html">About</a></li>
+					<li><a href="https://morganlee111.github.io/morganliliqize.github.io//Projects.html">Projects</a></li>
+					<li><a href="https://morganlee111.github.io/morganliliqize.github.io//Resume.html">Resume</a></li>
 					<li><a href="https://github.com/Morganlee111">Github</a></li>
 				</ul>
 			</nav>
@@ -82,13 +82,13 @@
     						<p>Feel free to <span class="purple">connect </span>with me</p>
     						<div class="social-icons">
         						<a href="https://github.com/" target="_blank">
-            						<img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/Github.png" alt="GitHub">
+            						<img src="https://morganlee111.github.io/morganliliqize.github.io//Github.png" alt="GitHub">
         						</a>
        							<a href="https://www.linkedin.com/" target="_blank">
-            						<img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/Linkedin.png" alt="LinkedIn">
+            						<img src="https://morganlee111.github.io/morganliliqize.github.io//Linkedin.png" alt="LinkedIn">
         						</a>
         						<a href="https://www.facebook.com/" target="_blank">
-            						<img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/facebook.png" alt="Facebook">
+            						<img src="https://morganlee111.github.io/morganliliqize.github.io//facebook.png" alt="Facebook">
         						</a>
    							</div>
 						</div>
