--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<h1>I'M <strong>Morgan Li</strong></h1>
 						</div>
 						<div class="image-side">
-							<img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/Personal%20Photo.png" alt="Personal Photo" class="home-photo">
+							<img src="https://morganlee111.github.io/morganliliqize.github.io//Personal%20Photo.png" alt="Personal Photo" class="home-photo">
 						</div>
 					</div>
 					<div class="col-md-5">
@@ -106,13 +106,13 @@
 			</div>
 			<div class="footer-right">
 				<a href="https://github.com/" target="_blank">
-					<img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/Github.png" alt="GitHub">
+					<img src="https://morganlee111.github.io/morganliliqize.github.io//Github.png" alt="GitHub">
 				</a>
 				<a href="https://www.linkedin.com/feed/" target="_blank">
-					<img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/Linkedin.png" alt="LinkedIn">
+					<img src="https://morganlee111.github.io/morganliliqize.github.io//Linkedin.png" alt="LinkedIn">
 				</a>
 				<a href="https://www.facebook.com/enoy.li.9" target="_blank">
-					<img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/facebook.png" alt="Facebook">
+					<img src="https://morganlee111.github.io/morganliliqize.github.io//facebook.png" alt="Facebook">
 				</a>
 		</footer>
 	</body>
