--- a/Projects.html
+++ b/Projects.html
@@ -9,22 +9,22 @@
             z-index: -1;
         }
     </style>
-    <link id="main-stylesheet" rel="stylesheet" href="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Css%20Folder/Projects.css">
-    <script src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/index.js"></script>
-</head>
-<body id="my-body1">
-    <header>
-        <h1><a href="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/index.html">Morgan Li Web</a></h1>
-        <nav>
-            <ul>
-                <li><a href="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/index.html">Home</a></li>
-                <li><a href="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/About.html">About</a></li>
-                <li><a href="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Projects.html">Projects</a></li>
-                <li><a href="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Resume.html">Resume</a></li>
-                <li><a href="https://github.com/Morganlee111">Github</a></li>
-            </ul>
-        </nav>
-    </header>
+		<link id="main-stylesheet" rel="stylesheet" href="https://morganlee111.github.io/morganliliqize.github.io//About.css">
+		<script src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/index.js"></script>
+	</head>
+	<body id="my-body1">
+		<header>
+			<h1><a href="https://morganlee111.github.io/morganliliqize.github.io//index.html">Morgan Li Web</a></h1>
+			<nav>
+				<ul>
+					<li><a href="https://morganlee111.github.io/morganliliqize.github.io//index.html">Home</a></li>
+					<li><a href="https://morganlee111.github.io/morganliliqize.github.io//About.html">About</a></li>
+					<li><a href="https://morganlee111.github.io/morganliliqize.github.io//Projects.html">Projects</a></li>
+					<li><a href="https://morganlee111.github.io/morganliliqize.github.io//Resume.html">Resume</a></li>
+					<li><a href="https://github.com/Morganlee111">Github</a></li>
+				</ul>
+			</nav>
+		</header>
 
     <section id="Projects">
         <h2>My Recent Works</h2>
