--- a/Resume.html
+++ b/Resume.html
@@ -9,18 +9,18 @@
 				z-index: -1;
 			}
 		</style>
-		<link id="main-stylesheet" rel="stylesheet" href="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Css%20Folder/Resume.css">
+		<link id="main-stylesheet" rel="stylesheet" href="https://morganlee111.github.io/morganliliqize.github.io//About.css">
 		<script src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/index.js"></script>
 	</head>
 	<body id="my-body1">
 		<header>
-			<h1><a href="https://stuweb.cecs.anu.edu.au/~u7412810/Other%20Pages/Fitness.html">Morgan Li Web</a></h1>
+			<h1><a href="https://morganlee111.github.io/morganliliqize.github.io//index.html">Morgan Li Web</a></h1>
 			<nav>
 				<ul>
-					<li><a href="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/index.html">Home</a></li>
-					<li><a href="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/About.html">About</a></li>
-					<li><a href="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Projects.html">Projects</a></li>
-					<li><a href="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Resume.html">Resume</a></li>
+					<li><a href="https://morganlee111.github.io/morganliliqize.github.io//index.html">Home</a></li>
+					<li><a href="https://morganlee111.github.io/morganliliqize.github.io//About.html">About</a></li>
+					<li><a href="https://morganlee111.github.io/morganliliqize.github.io//Projects.html">Projects</a></li>
+					<li><a href="https://morganlee111.github.io/morganliliqize.github.io//Resume.html">Resume</a></li>
 					<li><a href="https://github.com/Morganlee111">Github</a></li>
 				</ul>
 			</nav>
