--- a/About.html
+++ b/About.html
@@ -41,17 +41,17 @@
                     </ul>
                 </div>
                 <div class="about-image">
-                    <img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/Personal%20Photo.png" alt="Your Image">
+                    <img src="https://morganlee111.github.io/morganliliqize.github.io//Personal%20Photo.png" alt="Your Image">
                 </div>
             </div>
             <h3>Professional Skillsets</h3>
              <div class="skillset-images">
                 <!-- 第一行图片 -->
-                <img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/SQL.png" alt="Skill 1">
-                <img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/python.jpeg" alt="Skill 2">
-                <img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/R.jpeg" alt="Skill 3">
-                <img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/Xero.png" alt="Skill 4">
-                <img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/Myob.png" alt="Skill 5">
+                <img src="https://morganlee111.github.io/morganliliqize.github.io//SQL.png" alt="Skill 1">
+                <img src="https://morganlee111.github.io/morganliliqize.github.io//python.jpeg" alt="Skill 2">
+                <img src="https://morganlee111.github.io/morganliliqize.github.io//R.jpeg" alt="Skill 3">
+                <img src="https://morganlee111.github.io/morganliliqize.github.io//Xero.png" alt="Skill 4">
+                <img src="https://morganlee111.github.io/morganliliqize.github.io//Myob.png" alt="Skill 5">
                 <!-- 第二行图片
                 <img src="path_to_image6.png" alt="Skill 6">
                 <img src="path_to_image7.png" alt="Skill 7">
@@ -71,13 +71,13 @@
         </div>
         <div class="footer-right">
             <a href="https://github.com/" target="_blank">
-                <img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/Github.png" alt="GitHub">
+                <img src="https://morganlee111.github.io/morganliliqize.github.io//Github.png" alt="GitHub">
             </a>
             <a href="https://www.linkedin.com/feed/" target="_blank">
-                <img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/Linkedin.png" alt="LinkedIn">
+                <img src="https://morganlee111.github.io/morganliliqize.github.io//Linkedin.png" alt="LinkedIn">
             </a>
             <a href="https://www.facebook.com/enoy.li.9" target="_blank">
-                <img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/facebook.png" alt="Facebook">
+                <img src="https://morganlee111.github.io/morganliliqize.github.io//facebook.png" alt="Facebook">
             </a>
     </footer>
 </body>
