--- a/Projects.html
+++ b/Projects.html
@@ -31,10 +31,10 @@
         <p>Here are a few projects I've worked on recently.</p>
         <div class="projects-container">
             <div class="project" tabindex="0">
-                <img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/Echallenge.png" alt="Project 1">
+                <img src="https://morganlee111.github.io/morganliliqize.github.io//Echallenge.png" alt="Project 1">
             </div>
             <div class="project" tabindex="0">
-                <img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/Alibaba.png" alt="Project 2">
+                <img src="https://morganlee111.github.io/morganliliqize.github.io//Alibaba.png" alt="Project 2">
             </div>
             <div class="project" tabindex="0">
                 <img src="" alt="Project 3">
@@ -51,13 +51,13 @@
         </div>
         <div class="footer-right">
             <a href="https://github.com/" target="_blank">
-                <img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/Github.png" alt="GitHub">
+                <img src="https://morganlee111.github.io/morganliliqize.github.io//Github.png" alt="GitHub">
             </a>
             <a href="https://www.linkedin.com/feed/" target="_blank">
-                <img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/Linkedin.png" alt="LinkedIn">
+                <img src="https://morganlee111.github.io/morganliliqize.github.io//Linkedin.png" alt="LinkedIn">
             </a>
             <a href="https://www.facebook.com/enoy.li.9" target="_blank">
-                <img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/facebook.png" alt="Facebook">
+                <img src="https://morganlee111.github.io/morganliliqize.github.io//facebook.png" alt="Facebook">
             </a>
     </footer>
 </body>
