--- a/Resume.html
+++ b/Resume.html
@@ -28,9 +28,9 @@
 
 		<section id="Resume">
 			<div class="resume-container">
-				<a href="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Morgan%20Li%20Resume.pdf" class="download-cv-btn" download="Morgan_Li_Resume.pdf">Download CV</a>
-				<img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Morgan%20Li%20Resume.png" alt="Morgan Li Resume" style="width:100%; height:auto;">
-				<a href="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Morgan%20Li%20Resume.pdf" class="download-cv-btn1" download="Morgan_Li_Resume.pdf">Download CV</a>
+				<a href="https://morganlee111.github.io/morganliliqize.github.io//Morgan%20Li%20Resume.pdf" class="download-cv-btn" download="Morgan_Li_Resume.pdf">Download CV</a>
+				<img src="https://morganlee111.github.io/morganliliqize.github.io//Morgan%20Li%20Resume.png" alt="Morgan Li Resume" style="width:100%; height:auto;">
+				<a href="https://morganlee111.github.io/morganliliqize.github.io//Morgan%20Li%20Resume.pdf" class="download-cv-btn1" download="Morgan_Li_Resume.pdf">Download CV</a>
 			</div>
 		</section>
 
@@ -43,13 +43,13 @@
 			</div>
 			<div class="footer-right">
 				<a href="https://github.com/" target="_blank">
-					<img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/Github.png" alt="GitHub">
+					<img src="https://morganlee111.github.io/morganliliqize.github.io//Github.png" alt="GitHub">
 				</a>
 				<a href="https://www.linkedin.com/feed/" target="_blank">
-					<img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/Linkedin.png" alt="LinkedIn">
+					<img src="https://morganlee111.github.io/morganliliqize.github.io//Linkedin.png" alt="LinkedIn">
 				</a>
 				<a href="https://www.facebook.com/enoy.li.9" target="_blank">
-					<img src="file:///Users/morganli/Desktop/BA%E6%8A%80%E8%83%BD/Personal%20Web/Photos/facebook.png" alt="Facebook">
+					<img src="https://morganlee111.github.io/morganliliqize.github.io//facebook.png" alt="Facebook">
 				</a>
 		</footer>
 	</body>
