--- a/Projects.html
+++ b/Projects.html
@@ -36,9 +36,9 @@
             <div class="project" tabindex="0">
                 <img src="https://morganlee111.github.io/morganliliqize.github.io//Alibaba.png" alt="Project 2">
             </div>
-            <div class="project" tabindex="0">
+            <!-- <div class="project" tabindex="0">
                 <img src="" alt="Project 3">
-            </div>
+            </div> -->
         </div>
     </section>
 
