--- a/index.html
+++ b/index.html
@@ -50,25 +50,22 @@
 					<div class="row">
 						<div class="col-md-8 home-about-description">
 							<h1 class="intro-heading" style="font-size: 2.6em;">
-								LET ME <span class="purple"> INTRODUCE </span> MYSELF
+								LET ME <span class="purple">INTRODUCE</span> MYSELF
 							</h1>
 							<p class="home-about-body">
-								I fell in love with programming and I have at least learnt
-								something, I think… 🤷‍♂️
+								"I fell in love with programming and, I believe, have learned something significant. This is evidenced by my proficiency in SQL, Python, and R, and my success in applying these skills across competitive settings and in enhancing operational efficiencies."
 								<br /><br />
 								I am fluent in classics like
-								<i><b class="purple"> C++, Javascript and Go. </b></i>
+								<i><b class="purple">MYOB and Xero, demonstrated through my effective financial operations and project management. This was particularly evident in my role at L'Oréal, where I excelled in stakeholder communication and risk analysis.</b></i>
 								<br /><br />
-								My field of Interest's are building new
-								<i><b class="purple">Web Technologies and Products </b></i>
-								and also in areas related to
-								<b class="purple">Blockchain.</b>
+								My fields of interest include building new
+								<i><b class="purple">frameworks for startup evaluation</b></i>
+								and enhancing supply chain processes, as shown by my leadership in selecting top-tier startups and transforming cosmetic packaging operations.
 								<br /><br />
-								Whenever possible, I also apply my passion for developing products
-								with <b class="purple">Node.js</b> and
-								<i><b class="purple"> Modern Javascript Library and Frameworks</b></i>
-								like
-								<i><b class="purple"> React.js and Next.js</b></i>
+								Whenever possible, I also apply my passion for developing products, using my expertise in <b class="purple">data analysis to refine marketing strategies</b> and
+								<i><b class="purple">boost brand visibility,</b></i>
+								as well as
+								<i><b class="purple">contributing to educational and cultural projects.</b></i>
 							</p>
 						</div>
 						<div class="col-md-4 myAvtar">
