--- a/Resume.html
+++ b/Resume.html
@@ -28,9 +28,9 @@
 
 		<section id="Resume">
 			<div class="resume-container">
-				<a href="https://morganlee111.github.io/morganliliqize.github.io//Morgan%20Li%20Resume.pdf" class="download-cv-btn" download="Morgan_Li_Resume.pdf">Download CV</a>
-				<img src="https://morganlee111.github.io/morganliliqize.github.io//Morgan%20Li%20Resume.png" alt="Morgan Li Resume" style="width:100%; height:auto;">
-				<a href="https://morganlee111.github.io/morganliliqize.github.io//Morgan%20Li%20Resume.pdf" class="download-cv-btn1" download="Morgan_Li_Resume.pdf">Download CV</a>
+				<a href="https://github.com/Morganlee111/morganliliqize.github.io/blob/main/Morgan%20Li%20CV.pdf" class="download-cv-btn" download="Morgan_Li_Resume.pdf">Download CV</a>
+				<img src="https://github.com/Morganlee111/morganliliqize.github.io/blob/main/Morgan%20Li%20CV.png" alt="Morgan Li Resume" style="width:100%; height:auto;">
+				<a href="https://github.com/Morganlee111/morganliliqize.github.io/blob/main/Morgan%20Li%20CV.pdf" class="download-cv-btn1" download="Morgan_Li_Resume.pdf">Download CV</a>
 			</div>
 		</section>
 
@@ -39,7 +39,7 @@
 				<p>Designed and Developed by Morgan Li</p>
 			</div>
 			<div class="footer-center">
-				<p>Copyright © 2023 ML</p>
+				<p>Copyright © 2024 ML</p>
 			</div>
 			<div class="footer-right">
 				<a href="https://github.com/" target="_blank">
