--- a/Resume.html
+++ b/Resume.html
@@ -28,9 +28,9 @@
 
 		<section id="Resume">
 			<div class="resume-container">
-				<a href="https://github.com/Morganlee111/morganliliqize.github.io/blob/e9ca5eea2a13959fe064ec412e1ded0f5ac53f4e/Morgan%20Li%20CV.pdf" class="download-cv-btn" download="Morgan_Li_Resume.pdf">Download CV</a>
-				<img src="https://github.com/Morganlee111/morganliliqize.github.io/blob/e9ca5eea2a13959fe064ec412e1ded0f5ac53f4e/Morgan%20Li%20CV.png" alt="Morgan Li Resume" style="width:100%; height:auto;">
-				<a href="https://github.com/Morganlee111/morganliliqize.github.io/blob/e9ca5eea2a13959fe064ec412e1ded0f5ac53f4e/Morgan%20Li%20CV.pdf" class="download-cv-btn1" download="Morgan_Li_Resume.pdf">Download CV</a>
+				<a href="https://github.com/Morganlee111/morganliliqize.github.io/Morgan Li CV.pdf" class="download-cv-btn" download="Morgan_Li_Resume.pdf">Download CV</a>
+				<img src="https://github.com/Morganlee111/morganliliqize.github.io/Morgan Li CV.png" alt="Morgan Li Resume" style="width:100%; height:auto;">
+				<a href="https://github.com/Morganlee111/morganliliqize.github.io/Morgan Li CV.pdf" class="download-cv-btn1" download="Morgan_Li_Resume.pdf">Download CV</a>
 			</div>
 		</section>
 
