--- a/Resume.html
+++ b/Resume.html
@@ -27,9 +27,9 @@
 
 		<section id="Resume">
 			<div class="resume-container">
-				<a href="https://morganlee111.github.io/morganliliqize.github.io/Morgan%20Li%20CV.pdf" class="download-cv-btn" download="Morgan_Li_Resume.pdf">Download CV</a>
-				<img src="https://morganlee111.github.io/morganliliqize.github.io/Morgan%20Li%20CV.png" alt="Morgan Li Resume" style="width:100%; height:auto;">
-				<a href="https://morganlee111.github.io/morganliliqize.github.io/Morgan%20Li%20CV.pdf" class="download-cv-btn1" download="Morgan_Li_Resume.pdf">Download CV</a>
+				<a href="https://github.com/Morganlee111/morganliliqize.github.io/blob/main/Morgan%20Li%20Resume%20.pdf" class="download-cv-btn" download="Morgan_Li_Resume.pdf">Download CV</a>
+				<img src="https://github.com/Morganlee111/morganliliqize.github.io/blob/main/Morgan%20Li%20Resume%20.png" alt="Morgan Li Resume" style="width:100%; height:auto;">
+				<a href="https://github.com/Morganlee111/morganliliqize.github.io/blob/main/Morgan%20Li%20Resume%20.pdf" class="download-cv-btn1" download="Morgan_Li_Resume.pdf">Download CV</a>
 			</div>
 		</section>
 
